[package]
name = "ytbv"
version = "0.1.0"
edition = "2021"

authors = ["you"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls-tls"] }
rustypipe = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
viuer = { version = "0.7", default-features = false, features = ["sixel"] }
imagesize = "0.13"
time = "0.3"
